--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,8 @@
+### Updated about.html ###
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
@@ -23,7 +24,7 @@
         <h1>About Me</h1>
         <p>
             Hi there! I'm <strong>Eli Nelson</strong>, or just <strong>Eli</strong> to most people. I'm a passionate individual with diverse interests including <strong>Minecraft</strong>, <strong>modding</strong>,
-            <strong>coding</strong>, <strong>reading</strong> big books like Brandon Sanderson's *Way of Kings*, and playing <strong>Dungeons & Dragons</strong> (DND).
+            <strong>coding</strong>, <strong>reading</strong> big books like Brandon Sanderson's <em>Way of Kings</em>, and playing <strong>Dungeons & Dragons</strong> (DND).
         </p>
         <p>
             Though I'm still learning, I'm excited to grow as a Python developer.
