--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+### Updated contact.html ###
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +22,7 @@
 
   <div class="content">
     <h1>Contact Me</h1>
-    <form method="POST" action="/contact" class="form">
+    <form method="POST" action="https://get-to-know-me.onrender.com/contact" class="form">
       {% if error %}
       <div class="alert alert-danger" role="alert" aria-live="assertive">
         {{ error }}
